# news_scraper

./: .gitignore  README.md  docker-compose.yml  example_usage.py  init_db.sql  migration_add_trend.sql  pyproject.toml  run_google_avancado.py  run_google_scraper.py  run_google_search.py  run_instagram_scraper.py  run_linkedin_scraper.py  run_scraper.py  run_twitter_scraper.py  run_workflow.py
scripts/: setup_db.ps1  setup_db.sh
src/: __init__.py  etl_pipeline.py  google_scraper.py  main.py  news_scraper.py  posts_scraper.py  text_processing.py  trends_extractor.py  vector_db.py
src/scrapers/: __init__.py  g1_scraper.py  google_avancado.py  google_scraper.py  google_search.py  instagram_scraper.py  linkedin_scraper.py  twitter_scraper.py
